--- a/test1.html
+++ b/test1.html
@@ -883,69 +883,52 @@
     }
 
     function handleFileUpload(locId) {
-  try {
-    // TES AWAL: Jika ini muncul, berarti tombol berfungsi
-    console.log("Tombol klik terdeteksi untuk ID:", locId);
+  const fileInput = document.getElementById(`file-${locId}`);
+  const file = fileInput.files[0];
 
-    const fileInput = document.getElementById(`file-${locId}`);
-    if (!fileInput) {
-      alert("Error: Input file tidak ditemukan di HTML");
-      return;
-    }
-
-    const file = fileInput.files[0];
-    if (!file) {
-      Swal.fire('Peringatan', 'Pilih foto dulu!', 'warning');
-      return;
-    }
-
-    // Pastikan Firebase Storage siap
-    if (typeof firebase === 'undefined' || !firebase.storage) {
-      alert("Error: Firebase Storage belum terpasang dengan benar");
-      return;
-    }
-
-    const progBar = document.getElementById(`prog-bar-${locId}`);
-    const progFill = document.getElementById(`prog-fill-${locId}`);
-    progBar.style.display = 'block';
-    progFill.style.width = '0%';
-
-    const fileName = `location_images/${locId}_${Date.now()}`;
-    const storageRef = firebase.storage().ref(fileName);
-
-    console.log("Mencoba melakukan put(file)...");
-    const uploadTask = storageRef.put(file);
-
-    uploadTask.on('state_changed', 
-      (snapshot) => {
-        const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-        progFill.style.width = progress + '%';
-      }, 
-      (error) => {
-        console.error("Firebase Storage Error:", error);
-        alert("Gagal di Firebase: " + error.message);
-        progBar.style.display = 'none';
-      }, 
-      () => {
-        uploadTask.snapshot.ref.getDownloadURL().then((downloadURL) => {
-          db.collection('locations').doc(locId).update({ imageUrl: downloadURL })
-            .then(() => {
-              Swal.fire('Berhasil!', 'Foto terupdate.', 'success');
-              document.getElementById(`preview-${locId}`).src = downloadURL;
-              progBar.style.display = 'none';
-            });
-        });
-      }
-    );
-
-  } catch (err) {
-    // JIKA KODE MATI, INI AKAN MENAMPILKAN PESANNYA
-    console.error("CRASH ERROR:", err);
-    alert("KODE ERROR (Crash): " + err.message);
+  if (!file) {
+    Swal.fire('Peringatan', 'Pilih foto dulu!', 'warning');
+    return;
   }
+
+  const progBar = document.getElementById(`prog-bar-${locId}`);
+  const progFill = document.getElementById(`prog-fill-${locId}`);
+  progBar.style.display = 'block';
+  progFill.style.width = '0%';
+
+  const ext = file.name.split('.').pop();
+  const filePath = `location_images/${locId}_${Date.now()}.${ext}`;
+
+  const storageRef = firebase.storage().ref(filePath);
+  const metadata = {
+    contentType: file.type
+  };
+
+  const uploadTask = storageRef.put(file, metadata);
+
+  uploadTask.on(
+    'state_changed',
+    snapshot => {
+      const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+      progFill.style.width = progress + '%';
+    },
+    error => {
+      console.error(error);
+      Swal.fire('Error', error.message, 'error');
+      progBar.style.display = 'none';
+    },
+    async () => {
+      const downloadURL = await uploadTask.snapshot.ref.getDownloadURL();
+      await db.collection('locations').doc(locId).update({
+        imageUrl: downloadURL
+      });
+
+      document.getElementById(`preview-${locId}`).src = downloadURL;
+      progBar.style.display = 'none';
+      Swal.fire('Berhasil!', 'Foto lokasi berhasil diperbarui.', 'success');
+    }
+  );
 }
-
-
 
   </script>
 </body>
